# qml-pzv

./: Action.qml  CMakeLists.txt  Content.qml  main.cpp
